--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
-
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -29,12 +29,10 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
-    <div class="topnav">
-      <nav>
-        <span>Tweeter</span>
-        <span class="leftside-nav"><strong>Write</strong> a tweet</span>
+    <nav class="navbar">
+      <span class="navbar-left">Tweeter</span>
+      <span class="navbar-right">Write a tweet</span>
     </nav>
-    </div>
 
     <!-- Header -->
     <header>
@@ -50,20 +48,30 @@
       <section class="new-tweet">
         <form action="/tweets" method="POST">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
+          <div class="button-counter">
           <button class="submit-button" type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
         </form>
       </section>
 
       <!--Tweets section-->
       <div class="tweet-container">
-        <article >
+        <article class="tweet-article">
+          <header class ="tweet-header">
+            <h1 class="tweet-username">Ms. Kitty</h1>
+            <h1 class="tweet-username">@KittyGurl</h1>
+          </header>
+
           <div class="tweet-content">
             <p>
-              Tweet tweet.
+              Here's my groundbreaking take on world issues.
             </p>
           </div>
 
+          <footer class="footer">
+            <p>10 days ago</p>
+          </footer>
         </article>
 
       </div>
