add the tweet rendering functions with the html doc adjusted accordingly

--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
-    <!--<script type="text/javascript" src="/scripts/client.js"></script>-->
+    <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
     <script>$(document).ready(function() {
       console.log(this);
     });</script>
-  </head>
+    </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
@@ -56,7 +56,7 @@
       </section>
 
       <!--Tweets section-->
-      <div class="tweet-container">
+      <div id="tweets-container">
         <article class="tweet-article">
           <header class ="tweet-header">
             <h1 class="tweet-username">Ms. Kitty</h1>
