add some fixes to margins all over the page

--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,10 @@
 
     <!-- Header -->
     <header>
-      <div>
+      <div class="header-avatar">
         <img src="/images/profile-hex.png"> 
       </div>
-      <div>Your Name</div>
+      <div class="header-name"><strong>Dasha</strong> K.</div>
     </header>
 
     <!-- Page-specific (main) content here -->
