--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,13 @@
     <!-- Top nav bar (fixed) -->
     <nav class="navbar">
       <span class="navbar-left">Tweeter</span>
-      <a href="#new_tweet" class="navbar-right">
+      <button class="navbar-right">
         Write a tweet
-      </a>
+      </button>
     </nav>
 
     <!-- Header -->
-    <header>
+    <header class="header">
       <div class="header-avatar">
         <img src="/images/profile-hex.png">
       </div>
@@ -58,8 +58,7 @@
 
         <!--New Tweets form-->
         <form class="new-tweet" action="/tweets" method="POST">
-          <div id="new_tweets"></div>
-          <textarea id="new-tweet" class="textarea" name="text" placeholder="What are you humming about?"></textarea>
+          <textarea id="new-tweet" name="text" placeholder="What are you humming about?"></textarea>
           <div class="button-counter">
           <button class="submit-button" type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
@@ -70,7 +69,7 @@
 
       <!--Tweets section-->
       <div id="tweets-container">
-        <!--Rendered tweets go here-->
+        <!--Rendered tweets go here--> 
       </div>
 
     </main>
